RbA Build/src/objects/EJ_Color_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>EJ_Color__c</fullName>
        <label>EJ Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terratone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandtone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EJ_Species__c</fullName>
        <label>EJ Species</label>
        <picklist>
            <picklistValues>
                <fullName>Pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oak</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Configuration</label>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>EJ Color Configurations</relationshipLabel>
        <relationshipName>EJ_Color_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EJ Color Configuration</label>
    <nameField>
        <displayFormat>EC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EJ Color Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>